[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/UI/attack_tower.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/bag.png" type="Texture" id=3]
[ext_resource path="res://scripts/ta_fang_mode/to_ta_fang_title.gd" type="Script" id=4]
[ext_resource path="res://scenes/sounds/sound.tscn" type="PackedScene" id=5]
[ext_resource path="res://ready_scene/coin.tscn" type="PackedScene" id=6]

[node name="ta_ku" type="Node2D"]

[node name="Button2" type="Button" parent="."]
margin_left = 20.0
margin_top = 380.0
margin_right = 120.0
margin_bottom = 790.0
custom_fonts/font = ExtResource( 1 )
text = "←"

[node name="Button" type="Button" parent="."]
margin_left = 1660.0
margin_top = 330.0
margin_right = 1770.0
margin_bottom = 740.0
custom_fonts/font = ExtResource( 1 )
text = "→"

[node name="Spritess" type="Sprite" parent="."]
position = Vector2( 760, 430 )
scale = Vector2( 0.228323, 0.224763 )
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 572.5, 428.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 762.5, 428.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 972.5, 428.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 1182.5, 428.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 572.5, 778.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 772.5, 788.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 992.5, 788.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 1202.5, 788.813 )
scale = Vector2( 2.57812, 4.9629 )
texture = ExtResource( 3 )

[node name="to_title" type="Button" parent="."]
margin_right = 270.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 1 )
text = "←"
script = ExtResource( 4 )

[node name="sound" parent="." instance=ExtResource( 5 )]

[node name="coin" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="to_title" to="to_title" method="_on_to_title_pressed"]
